--- a/tasks/setup_service.yml
+++ b/tasks/setup_service.yml
@@ -10,6 +10,7 @@
         mode: 0644
       with_items:
         - nginx.service
+      become: yes
       register: systemd_service
 
     - name: reload systemd
